Fixing rendering issue on mobile - removing gradient text on mobile devices

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -187,10 +187,7 @@ body {
 .home {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
-  /*display: flex;
-    flex-direction: column;
-    align-items: stretch;*/ }
+  transform: translateY(-50%); }
   @media (min-width: 56.25em) {
     .home {
       left: 50%;
@@ -205,14 +202,14 @@ body {
       .home__text-box {
         margin: 2rem auto; } }
   .home-headline {
-    font-size: 2.5rem;
-    color: orangered;
-    border-top: 1px solid #fff;
-    overflow-y: hidden; }
+    font-size: 2.5rem; }
     .home-headline--gradient {
-      background: linear-gradient(to right, #441d8c 0%, #546ead 100%);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent; }
+      color: #441d8c; }
+      @media (min-width: 56.25em) {
+        .home-headline--gradient {
+          background: linear-gradient(to right, #441d8c 0%, #546ead 100%);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent; } }
     @media (min-width: 56.25em) {
       .home-headline {
         font-size: 3.6rem;
