--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -4,11 +4,6 @@
     top: 50%;
     transform: translateY(-50%);
     
-    // TESTING
-    /*display: flex;
-    flex-direction: column;
-    align-items: stretch;*/
-    
     @include for-tablet-landscape-up {
         left: 50%;
         transform: translate(-50%,-50%);
@@ -32,20 +27,13 @@
     
     &-headline {
         font-size: 2.5rem;
-        color: orangered;
-        
-        // TESTING
-        border-top: 1px solid $color-white;
-        overflow-y: hidden;
         
         &--gradient {
-            @include gradient-text;
+            color: $color-violet-dark;
             
-            // TESTING
-            //outline: 3px solid orangered;
-            //overflow-y: hidden;
-            //box-shadow: 0 -1px 0 orangered;
-            //box-shadow: 0 -.8px 0 $color-white;
+            @include for-tablet-landscape-up {
+                @include gradient-text;
+            }
         }
         
         @include for-tablet-landscape-up {
